samples/_failures_safe/1761660749_8e27d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20636bf9.c: In function ‘main’:
./samples/SAFE/__tmp_20636bf9.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
